-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 8.0.0-beta1
-
None
-
-
bef1ace116 (qt-creator/qt-creator/master)
With Qt Creator 7 when CMake is configuring a project and one hits Stop CMake button the output would stop immediately.
With Qt Creator 8 (master branch) this is not the case.
After doing a git bisect the culprit was QtcProcess: Fix terminate() for process launcher (I7e2bc46a) · Gerrit Code Review (qt-project.org) (commit 00acccfd3d668e2936677c7ebb9914e363c700c8)
Edit: With CMakePM: Use CtrlC stub for the CMake process (Ibe227f63) · Gerrit Code Review (qt-project.org) "Stop CMake" is fixed on Windows.
The problem now is stopping the Configure "Project" via the small x button, which used to work with Qt Creator 7 and now in master is broken on Windows and Linux.