CMakePM: Use CtrlC stub for the CMake process

This makes sure that the CMake process is terminated.

Fixes: QTCREATORBUG-27518
Change-Id: Ibe227f6336be312abbe2517af421856463e9c9e8
Reviewed-by: Orgad Shaneh <orgads@gmail.com>